--- a/index.html
+++ b/index.html
@@ -8,20 +8,25 @@
 </head>
 <body>
     <header>
-        <h1>Welcome to My Personal Website</h1>
-        <nav>
-            <ul>
-                <li><a href="cv.html">CV</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="photos.html">Photos</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="links.html">Links</a></li>
-            </ul>
-        </nav>
+        <div class="banner">
+            <h1>Welcome to My Personal Website</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="photos.html">Photos</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="links.html">Links</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
-        <p>Hello! This is my personal website hosted on GitHub Pages.</p>
+        <section class="intro">
+            <p>Hello! This is my personal website hosted on GitHub Pages.</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 ctpallone</p>
