--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
             <h1>Welcome to My Personal Website</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html"><i class="fas fa-home"></i> Home</a></li>
-                    <li><a href="cv.html"><i class="fas fa-file-alt"></i> CV</a></li>
-                    <li><a href="research.html"><i class="fas fa-flask"></i> Research</a></li>
-                    <li><a href="photos.html"><i class="fas fa-camera"></i> Photos</a></li>
-                    <li><a href="publications.html"><i class="fas fa-book"></i> Publications</a></li>
-                    <li><a href="contact.html"><i class="fas fa-envelope"></i> Contact</a></li>
-                    <li><a href="links.html"><i class="fas fa-link"></i> Links</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="photos.html">Photos</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="links.html">Links</a></li>
                 </ul>
             </nav>
         </div>
