--- a/cv.html
+++ b/cv.html
@@ -8,17 +8,20 @@
 </head>
 <body>
     <header>
-        <h1>My CV</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="photos.html">Photos</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="links.html">Links</a></li>
-            </ul>
-        </nav>
+        <div class="banner">
+            <h1>My CV</h1>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="cv.html">CV</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="photos.html">Photos</a></li>
+                    <li><a href="publications.html">Publications</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="links.html">Links</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         <p>This is my CV page.</p>
