--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home - My Personal Website</title>
+    <title>My Personal Website</title>
     <link href="dist/styles.css" rel="stylesheet">
     <!-- Or use CDN for quick start -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet"> -->
@@ -11,7 +11,7 @@
 <body class="bg-gray-100 text-gray-800">
     <header class="bg-green-500 text-white py-4">
         <div class="container mx-auto text-center">
-            <h1 class="text-4xl font-bold">My CV</h1>
+            <h1 class="text-4xl font-bold">Welcome to My Personal Website</h1>
             <nav class="mt-4">
                 <ul class="flex justify-center space-x-4">
                     <li><a href="index.html" class="hover:underline">Home</a></li>
@@ -27,8 +27,7 @@
     </header>
     <main class="container mx-auto py-8">
         <section class="bg-white p-6 rounded-lg shadow-md">
-            <p class="text-center">This is my CV page.</p>
-            <!-- Add your CV content here -->
+            <p class="text-center">Hello! This is my personal website hosted on GitHub Pages.</p>
         </section>
     </main>
     <footer class="bg-green-500 text-white py-4 mt-8">
