--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Yuxin Zhou">
-    <meta name="author" content="Yuxin Zhou">
+    <meta name="description" content="Celeste T. Pallone">
+    <meta name="author" content="Celeste T. Pallone">
 
         <title>Celeste T. Pallone - Home · Celeste T. Pallone</title>
 
@@ -141,7 +141,7 @@
       <div class="col-md-8">
         <div class="row">
               <div class="page-header">
-        <h1><a href="./">Yuxin Zhou - Home</a></h1>
+        <h1><a href="./">Celeste T. Pallone - Home</a></h1>
     </div>
 
         </div>
