--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,10 +3,10 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    <meta name="description" content="Yuxin Zhou">
-    <meta name="author" content="Yuxin Zhou">
+    <meta name="description" content="Celeste T. Pallone">
+    <meta name="author" content="Celeste T. Pallone">
 
-        <title>Contact · Yuxin Zhou</title>
+        <title>Contact · Celeste T. Pallone</title>
 
 
     <!-- Bootstrap core CSS -->
