--- a/pages/contact.html
+++ b/pages/contact.html
@@ -41,7 +41,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="..">Yuxin Zhou</a>
+        <a class="navbar-brand" href="..">Celeste T. Pallone</a>
       </div> <!--navbar-header-->
 
       <!-- Search Box -->
