--- a/pages/contact.html
+++ b/pages/contact.html
@@ -149,7 +149,8 @@
         <div class="row">
 <div id="page-content">
   <p><img src="../images/MIT Dome.jpeg" alt="Ziggy at MIT." width="100%"/></p>
-<p>Massachusetts Institute of Technology<br />
+<p>Celeste T. Pallone<br />
+Massachusetts Institute of Technology<br />
 77 Massachusetts Avenue<br />
 4-437<br />
 Cambridge, MA 02139</p>
