--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
         <div class="row">
 <div id="page-content">
   <p><img src="./images/fyq_3.jpg" alt="Profile picture" style="width: 100%;"/></p>
-<p>XX<p></p></div>
+<p>My name is Celeste and I am a paleoceanographer experienced in isotope geochemistry (stable and radiogenic), micropaleontology, and sedimentology. I use marine sediments to study tropical ocean-atmosphere interactions and ENSO in the eastern equatorial Pacific over recent glacial cycles, North Atlantic deep ocean circulation across the Pleistocene, and changes in global climate and ocean circulation across the Eocene.<p>
+    
+</p></div>
         </div>
 
         <div class="row">
