--- a/pages/cv.html
+++ b/pages/cv.html
@@ -148,7 +148,7 @@
 
         <div class="row">
 <div id="page-content">
-  <p><a href="../pdfs/Celeste_Pallone_CV.pdf">CV</a> (pdf, last updated Nov. 2024)</p>
+  <p><a href="../pdfs/Celeste_Pallone_CV.pdf">CV</a> (pdf, last updated January 2025)</p>
 </div>
         </div>
 
