--- a/pages/contact.html
+++ b/pages/contact.html
@@ -68,31 +68,13 @@
                 </a>
                 <ul class="dropdown-menu" role="menu">
                   <li >
-                    <a href="../BIGMACS_stack.html" >BIGMACS stack</a>
+                    <a href="../Pleistocene Tropical Pacific.html" >Pleistocene Tropical Pacific</a>
                   </li>
                   <li >
-                    <a href="../LGI.html" >Last glacial inception</a>
+                    <a href="../Expedition 397: Iberian Margin Paleoclimate.html" >Expedition 397: Iberian Margin Paleoclimate</a>
                   </li>
                   <li >
-                    <a href="../freshwater.html" >Freshwater flux</a>
-                  </li>
-                  <li >
-                    <a href="../aU.html" >Authigenic U</a>
-                  </li>
-                  <li >
-                    <a href="../LILO_event.html" >LILO event</a>
-                  </li>
-                  <li >
-                    <a href="../IRDflux.html" >IRD flux</a>
-                  </li>
-                  <li >
-                    <a href="../suess.html" >Suess Effect</a>
-                  </li>
-                  <li >
-                    <a href="../Isostacy.html" >Isostasy</a>
-                  </li>
-                  <li >
-                    <a href="../ENSO.html" >ENSO</a>
+                    <a href="../Cenozoic Hyperthermals.html" >Cenozoic Hyperthermals</a>
                   </li>
                 </ul>
               </li>
