--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <a href="../Pleistocene Tropical Pacific.html" >Pleistocene Tropical Pacific</a>
                   </li>
                   <li >
-                    <a href="../Expedition 397: Iberian Margin Paleoclimate.html" >Expedition 397: Iberian Margin Paleoclimate</a>
+                    <a href="../IODP Expedition 397: Iberian Margin Paleoclimate.html" >IODP Expedition 397: Iberian Margin Paleoclimate</a>
                   </li>
                   <li >
                     <a href="../Cenozoic Hyperthermals.html" >Cenozoic Hyperthermals</a>
@@ -90,15 +90,15 @@
                 </a>
                 <ul class="dropdown-menu" role="menu">
                   <li >
-                    <a href="https://scholar.google.com/citations?user=381uqXwAAAAJ&hl=en"     target="_blank"
+                    <a href="https://scholar.google.com/citations?user=D57IrMIAAAAJ&hl=en"     target="_blank"
 >Google Scholar</a>
                   </li>
                   <li >
-                    <a href="https://github.com/yz3062"     target="_blank"
+                    <a href="https://github.com/ctpallone"     target="_blank"
 >GitHub</a>
                   </li>
                   <li >
-                    <a href="https://bsky.app/profile/yzhouclimate.bsky.social"     target="_blank"
+                    <a href="https://bsky.app/profile/cpallone.bsky.social"     target="_blank"
 >Bluesky</a>
                   </li>
                 </ul>
