--- a/pages/contact.html
+++ b/pages/contact.html
@@ -133,6 +133,7 @@ Massachusetts Institute of Technology<br />
 4-437<br />
 Cambridge, MA 02139</p>
 <p>Email: <a href="mailto:cpallone@mit.edu">cpallone@mit.edu</a></p>
+<p>Orcid: <a href="https://orcid.org/my-orcid?orcid=0000-0002-3149-4280">0000-0002-3149-4280>
 </div>
         </div>
 
