--- a/pages/photos.html
+++ b/pages/photos.html
@@ -121,30 +121,17 @@
 
         <div class="row">
 <div id="page-content">
-  <p><img src="../images/Comer_conference.jpg" alt="Talk at Comer Conference" width="100%" />
-Presenting my research at the 2023 Comer Climate Conference at Leeward Farm, WI.</p>
-<p><img src="../images/RR2218.jpeg" alt="Onboard R/V Roger Revelle" width="100%" />
-Before our cruise aboard R/V Roger Revelle started, I prepared the core liners on deck by labeling them and drawing the paleomagnetic line. In the background were Rob Hatfield, Chandranath Basak, Summer Praetorius, and Davide Oppo.</p>
-<p><img src="../images/Openhouse_1.png" alt="Lamont open house 1" width="100%" />
-During <a href="https://openhouse.ldeo.columbia.edu/">Lamont open house</a>, an annual public science outreach event, I was part of a team doing an exhibit on the iron availability in the ocean. </p>
-<p><img src="../images/Openhouse_2.jpg" alt="Lamont open house 2" width="100%" />
-We fished out iron from cereals floating in water with magnets. Next to me was Jenny Middleton, now a Lamont scienctist.</p>
-<p><img src="../images/Goldschmidt_1.jpg" alt="Goldschmidt 2019 1" width="100%" />
-Presenting my research on the history of iceberg discharge at the Goldschmidt geochemistry conference in Barcelona last year.</p>
-<p><img src="../images/Goldschmidt_2.jpg" alt="Goldschmidt 2019 2" width="100%" />
-Goldschmidt poster session.</p>
-<p><img src="../images/Halloween.jpg" alt="Core slabbing at WHOI" width="100%" />
-Halloween in 2018, where I dressed up as an inductively coupled plasma mass spectrometry, the machine I use to analyze samples. "Thermo" is the brand of the machine, and the light bulb represents the plasma. With me were Athena Nghiem (middle), and Tyler Ellis (right; a research staff).</p>
-<p><img src="../images/WHOI_core.jpg" alt="Core slabbing at WHOI" width="100%" /></p>
-<p>Core slabbing with my labmate Henry Abrams at WHOI.</p>
-<p><img src="../images/WHOI_Knorr.jpg" alt="Knorr visit" width="100%"/></p>
-<p>WHOI 2015 summer student fellows (partial) group photo. Floating in the background is the now retired R/V Knorr. It discovered the wreck of the RMS Titanic in 1985.</p>
-<p><img src="../images/Argentina.jpg" alt="Argentina field trip" width="100%"/></p>
-<p>Visiting a volcano in Puna Plateau, Argentina, as a class field trip led by Professor Scott Paterson.</p>
-<p><img src="../images/climdyn.jpg" alt="climdyn group celebration" width="100%"/></p>
-<p>USC climate dynamics group lunch. We celebrated the first papers published by Ph.D students Sylvia and Jianghao.</p>
-<p><img src="../images/christmas.jpg" alt="holiday party" width="100%"/></p>
-<p>Undergraduates group photo in the 2013 USC Earth Sciences departmental holiday party.</p>
+  <p><img src="../images/JR Port.jpg" alt="The JOIDES Resolution in Port in Lisbon" width="100%" />
+The JOIDES Resolution in Port in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
+<p><img src="../images/JR Sunrise 1.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/> 
+    <img src="../images/JR Sunrise 2.png" alt="Sunrise on the JR over the North Atlantic 2" width="50%" /> 
+    <img src="../images/North Atlantic Ocean.png" alt="Seabird" width="50%" /> 
+Views of the North Atlantic on the JR during Expedition 397 in Fall 2022.</p>
+
+<p><img src="../images/JR Sediments.jpeg" alt="Sediments" width="50%"/> 
+    <img src="../images/JR Sediment Heart.png" alt="Sediment Heart" width="50%" /> 
+Beautiful, but disturbed marine sediments from the Iberian Margin during Expedition 397 in Fall 2022.</p>
+
 </div>
         </div>
 
