--- a/pages/photos.html
+++ b/pages/photos.html
@@ -59,7 +59,7 @@
                   <a href="../index.html" >Home</a>
                 </li>
 
-                <li >
+                <li class="active">
                   <a href="../pages/cv.html" >CV</a>
                 </li>
 
@@ -75,6 +75,11 @@
                   </li>
                   <li >
                     <a href="../Cenozoic Hyperthermals.html" >Cenozoic Hyperthermals</a>
+                  </li>
+                </ul>
+              </li>
+                <li >
+                  <a href="../pages/photos.html" >Photos</a>
                 </li>
 
                 <li >
