--- a/pages/photos.html
+++ b/pages/photos.html
@@ -137,6 +137,10 @@ Views of the North Atlantic on the JR during Expedition 397 in Fall 2022.</p>
     <img src="../images/JR Sediment Heart.png" alt="Sediment Heart" width="50%" /> 
 Beautiful, but disturbed marine sediments from the Iberian Margin during Expedition 397 in Fall 2022.</p>
 
+    <p><img src="../images/JR Jerry.png" alt="Celeste and Jerry" width="50%"/> 
+Celeste Pallone (left) and Jerry McManus (right) on Expedition 397 in Fall 2022 (Credit: Sandra Herrmann, IODP JRSO).</p>
+   
+
 </div>
         </div>
 
