--- a/pages/photos.html
+++ b/pages/photos.html
@@ -126,15 +126,15 @@
 
         <div class="row">
 <div id="page-content">
-  <p><img src="../images/JR Port.jpg" alt="The JOIDES Resolution in Port in Lisbon" width="100%" />
+  <p><img src="../images/JR Port.jpg" alt="The JOIDES Resolution in Port in Lisbon" width="100%" /></p>
 The JOIDES Resolution in Port in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
-<p><img src="../images/JR Sunrise 1.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/> 
+<p><img src="../images/JR Sunrise 1.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/> </p>
 Views of the North Atlantic on the JR during Expedition 397 in Fall 2022.</p>
 
-<p><img src="../images/JR Sediments.jpeg" alt="Sediments" width="50%"/> 
+<p><img src="../images/JR Sediments.jpeg" alt="Sediments" width="50%"/> </p>
 Beautiful, but disturbed marine sediments from the Iberian Margin during Expedition 397 in Fall 2022.</p>
 
-    <p><img src="../images/JR Jerry.png" alt="Celeste and Jerry" width="50%"/> 
+    <p><img src="../images/JR Jerry.png" alt="Celeste and Jerry" width="50%"/> </p>
 Celeste Pallone (left) and Jerry McManus (right) on Expedition 397 in Fall 2022 (Credit: Sandra Herrmann, IODP JRSO).</p>
    
 
