--- a/pages/photos.html
+++ b/pages/photos.html
@@ -130,7 +130,7 @@
 The JOIDES Resolution in Port in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
 <p><img src="../images/JR Sunrise 1.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/>
 <img src="../images/JR Sunrise 2.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/> </p>
-Views of the North Atlantic on the JR during Expedition 397 in Fall 2022.</p>
+Views of the North Atlantic from the JR during Expedition 397 in Fall 2022.</p>
 
 <p><img src="../images/JR Sediments.jpeg" alt="Sediments" width="50%"/> 
 <img src="../images/JR Sediment Heart.jpeg" alt="Sediments" width="50%"/> </p>
@@ -138,6 +138,8 @@ Beautiful, but disturbed marine sediments from the Iberian Margin during Expedit
 
     <p><img src="../images/JR Jerry.jpeg" alt="Celeste and Jerry" width="50%"/> </p>
 Celeste Pallone (left) and Jerry McManus (right) on Expedition 397 in Fall 2022 (Credit: Sandra Herrmann, IODP JRSO).</p>
+   <p><img src="../images/JR Core Split" alt="Core Splitting" width="50%"/> </p>
+Beth Novak (left) and Celeste Pallone (right) splitting a core while on Expedition 397 in Fall 2022.</p>
    
 
 </div>
