--- a/pages/photos.html
+++ b/pages/photos.html
@@ -127,7 +127,7 @@
         <div class="row">
 <div id="page-content">
   <p><img src="../images/JR Port.jpeg" alt="The JOIDES Resolution in Port in Lisbon" width="75%" /></p>
-The JOIDES Resolution in Port in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
+The JOIDES Resolution in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
 <p><img src="../images/JR Sunrise 1.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/><img src="../images/JR Sunrise 2.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/> </p>
 Views of the North Atlantic from the JR during Expedition 397 in Fall 2022.</p>
 
