--- a/pages/photos.html
+++ b/pages/photos.html
@@ -126,6 +126,11 @@
 
         <div class="row">
 <div id="page-content">
+
+    <p><img src="../images/LDEO Winter.jpeg" alt="LDEO Winter" width="50%"/><img src="../images/LDEO Spring.jpeg" alt="LDEO Spring" width="50%"/> </p>
+    <p><img src="../images/LDEO Summer.jpeg" alt="LDEO Summer" width="50%"/><img src="../images/LDEO Fall.jpeg" alt="LDEO Fall" width="50%"/> </p>
+Lamont-Doherty Earth Observatory across the seasons.</p>
+    
   <p><img src="../images/JR Port.jpeg" alt="The JOIDES Resolution in Port in Lisbon" width="75%" /></p>
 The JOIDES Resolution in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
 <p><img src="../images/JR Sunrise 1.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/><img src="../images/JR Sunrise 2.jpeg" alt="Sunrise on the JR over the North Atlantic 1" width="50%"/> </p>
@@ -136,7 +141,7 @@ Beautiful, but disturbed marine sediments from the Iberian Margin during Expedit
 
     <p><img src="../images/JR Jerry.jpeg" alt="Celeste and Jerry" width="50%"/> </p>
 Celeste Pallone (left) and Jerry McManus (right) on Expedition 397 in Fall 2022 (Credit: Sandra Herrmann, IODP JRSO).</p>
-   <p><img src="../images/JR Core Split" alt="Core Splitting" width="50%"/> </p>
+   <p><img src="../images/JR Core Split.jpeg" alt="Core Splitting" width="50%"/> </p>
 Beth Novak (left) and Celeste Pallone (right) splitting a core while on Expedition 397 in Fall 2022.</p>
    
 
