--- a/pages/photos.html
+++ b/pages/photos.html
@@ -129,7 +129,13 @@
 
     <p><img src="../images/LDEO Winter.jpeg" alt="LDEO Winter" width="50%"/><img src="../images/LDEO Spring.jpeg" alt="LDEO Spring" width="50%"/> </p>
     <p><img src="../images/LDEO Summer.jpeg" alt="LDEO Summer" width="40%"/><img src="../images/LDEO Fall.jpeg" alt="LDEO Fall" width="50%"/> </p>
-Lamont-Doherty Earth Observatory across the seasons.</p>
+Lamont-Doherty Earth Observatory (LDEO) across the seasons.</p>
+
+    <p><img src="../images/LDEO Eclipse.jpeg" alt="LDEO Eclipse" width="50%"/></p>
+Shadows at LDEO during the Monday, April 8, 2024 solar eclipse.</p>
+
+    <p><img src="../images/Dissertation Defense Jerry.jpeg" alt="Dissertation Defense Jerry" width="50%"/><img src="../images/Dissertation Defense Friends.jpeg" alt="Dissertation Defense Friends" width="50%"/></p>
+Left Image: Jerry McManus (left) and Celeste Pallone (right). Right Image: Celeste Pallone (left), Claire Jasper (middle), and Chandler Morris (right) after dissertation defense in October 2024.</p>
     
   <p><img src="../images/JR Port.jpeg" alt="The JOIDES Resolution in Port in Lisbon" width="75%" /></p>
 The JOIDES Resolution in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
