--- a/pages/photos.html
+++ b/pages/photos.html
@@ -126,6 +126,7 @@
 
         <div class="row">
 <div id="page-content">
+<div class="container content-center">
 
     <p><img src="../images/LDEO Winter.jpeg" alt="LDEO Winter" width="50%"/><img src="../images/LDEO Spring.jpeg" alt="LDEO Spring" width="50%"/> </p>
     <p><img src="../images/LDEO Summer.jpeg" alt="LDEO Summer" width="45%"/><img src="../images/LDEO Fall.jpeg" alt="LDEO Fall" width="55%"/> </p>
