--- a/pages/photos.html
+++ b/pages/photos.html
@@ -134,7 +134,7 @@ Lamont-Doherty Earth Observatory (LDEO) across the seasons.</p>
 Shadows at LDEO during the Monday, April 8, 2024 solar eclipse.</p>
 
     <p><img src="../images/Dissertation Defense Jerry.jpeg" alt="Dissertation Defense Jerry" width="50%"/><img src="../images/Dissertation Defense Friends.jpeg" alt="Dissertation Defense Friends" width="50%"/></p>
-Left Image: Jerry McManus (left) and Celeste Pallone (right). Right Image: Celeste Pallone (left), Claire Jasper (middle), and Chandler Morris (right) after dissertation defense in October 2024.</p>
+Left Image: Jerry McManus (left) and Celeste Pallone (right). Right Image: Celeste Pallone (left), Claire Jasper (middle), and Chandler Morris (right) after dissertation defense in October, 2024.</p>
     
   <p><img src="../images/JR Port.jpeg" alt="The JOIDES Resolution in Port in Lisbon" width="75%" /></p>
 The JOIDES Resolution in Lisbon, Portugal prior to departure for IODP Expedition 397: Iberian Margin Paleoclimate in October, 2022.</p>
