Update Pleistocene Tropical Pacific.html

--- a/Pleistocene Tropical Pacific.html
+++ b/Pleistocene Tropical Pacific.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Celeste T. Pallone">
     <meta name="author" content="Celeste T. Pallone">
 
-        <title>BIGMACS Pleistocene stack · Celeste T. Pallone</title>
+        <title>Pleistocene Tropical Pacific· Celeste T. Pallone</title>
 
 
     <!-- Bootstrap core CSS -->
@@ -141,8 +141,7 @@
   <hr/>
 
   <div id="article_content">
-    <p>Benthic \delta<sup>18</sup>O stacks can serve as measures of global climate change and stratigraphic alignment targets. Recently, a new method of constructing benthic \delta<sup>18</sup>O stacks with Bayesian inference has been developed that can take advantage of multiple types of age information, including stratigraphic alignment of benthic \delta<sup>18</sup>O, tephra layers, and magnetic reversals. Called BIGMACS (Bayesian Inference Gaussian Process regression and Multiproxy Alignment of Continuous Signals), the new software offers an opportunity to revisit Pleistocene benthic \delta<sup>18</sup>O stack with a new probabilistic alignment algorithm and updated age constraints. Here, we present a new Pleistocene benthic \delta<sup>18</sup>O stack constructed with BIGMACS. We compare the new stack with previous efforts, including the classic LR04 and another stack made with Bayesian methods, ProbStack, and discuss how the stacking methods may contribute to differences between the stacks. We also present regional stacks focusing on individual ocean basins. The regional stacks are made possible because BIGMACS uses Gaussian process regression and requires a smaller number of cores than previous stacking methods. We examine regional trends in our stack and discuss our results during periods of interest to the paleoclimate community, such as the 100-kyr world and Mid-Pleistocene Transition.</p>
-<p>We presented this work at AGU 2023. More updates soon!</p>
+    <p>XX</p>
   </div>
 
   <hr/>
