--- a/Pleistocene Tropical Pacific.html
+++ b/Pleistocene Tropical Pacific.html
@@ -119,7 +119,7 @@
       <div class="col-md-8">
         <div class="row">
               <div class="page-header">
-        <h1><a href="./BIGMACS.html">BIGMACS Pleistocene stack</a></h1>
+        Pleistocene Tropical Pacific
     </div>
 
         </div>
@@ -128,11 +128,9 @@
 
     <span id="article_info">
     <a class="label label-primary"
-      href="./category/postdoc-research.html">Postdoc research</a>
+      href="./category/postdoc-research.html">Ph.D. research</a>
     <!--<span class="glyphicon glyphicon-calendar"></span>-->
       <b> · </b>
-      <a href="./archives.html#Year2023">2023</a>-<a href="./archives.html#Year2023Month01">01</a>-<a href="./archives.html#Year2023Month01">16</a>
-
     <!--<span class="glyphicon glyphicon-user"></span>-->
       <b> · </b>
     <a href="./author/Celeste T. Pallone.html">Celeste T. Pallone</a>
