--- a/Pleistocene Tropical Pacific.html
+++ b/Pleistocene Tropical Pacific.html
@@ -121,14 +121,7 @@
       <div class="col-md-8">
         <div class="row">
               <div class="page-header">
-        Pleistocene Tropical Pacific
-    </div>
-
-        </div>
-
-        <div class="row">
-
-  <hr/>
+        <h1>Pleistocene Tropical Pacific</h1>
 
   <div id="article_content">
     <p>XX</p>
