--- a/Pleistocene Tropical Pacific.html
+++ b/Pleistocene Tropical Pacific.html
@@ -122,9 +122,18 @@
         <div class="row">
               <div class="page-header">
         <h1>Pleistocene Tropical Pacific</h1>
- </div>
+    </div>
 
-  <hr/>
+        </div>
+
+        <div class="row">
+<div id="page-content">
+    <p>XX</p>
+  </div>
+        </div>
+
+        <div class="row">
+        </div>
 
       </div>
 
@@ -134,9 +143,6 @@
 
 
   </div>
-
-  <div id="article_content">
-    <p>XX</p>
 
 
     <nav id="footer" class="navbar navbar-default">
