--- a/Pleistocene Tropical Pacific.html
+++ b/Pleistocene Tropical Pacific.html
@@ -121,7 +121,7 @@
       <div class="col-md-8">
         <div class="row">
               <div class="page-header">
-        <h1>Pleistocene Tropical Pacific</h1>
+        <h1><a href="./">Pliestocene Tropical Pacific</a></h1>
     </div>
 
         </div>
