--- a/IODP Expedition 397: Iberian Margin Paleoclimate.html
+++ b/IODP Expedition 397: Iberian Margin Paleoclimate.html
@@ -119,7 +119,7 @@
       <div class="col-md-8">
         <div class="row">
               <div class="page-header">
-        <h1><a href="IODP Expedition 397: Iberian Margin Paleoclimate.html">IODP Expedition 397: Iberian Margin Paleoclimate</a></h1>
+        <h1><a href="https://ctpallone.github.io/IODP%20Expedition%20397:%20Iberian%20Margin%20Paleoclimate.html">IODP Expedition 397: Iberian Margin Paleoclimate</a></h1>
     </div>
 
         </div>
