--- a/IODP Expedition 397: Iberian Margin Paleoclimate.html
+++ b/IODP Expedition 397: Iberian Margin Paleoclimate.html
@@ -127,6 +127,7 @@
         <div class="row">
 <div id="page-content">
     <p>XX</p>
+    <p><img src="./images/397_Patch.jpeg" alt="Expedition 397 Patch."/><center><em>IODP Expedition 397 Patch.
   </div>
         </div>
 
