--- a/Cenozoic Hyperthermals.html
+++ b/Cenozoic Hyperthermals.html
@@ -126,7 +126,7 @@
 
         <div class="row">
 <div id="page-content">
-    <p>XX</p>
+    <p>Stay tuned for updates!</p>
   </div>
         </div>
 
